--- a/emojiStories.html
+++ b/emojiStories.html
@@ -5,8 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emoji Stories App</title>
+  <link rel="stylesheet" href="./emojiStories.css">
+  <script src="./emojiStories.js" defer></script>
 </head>
 <body>
-  
+  <h1 class="titles" id="maintitle">Emoji Story Time</h1>
+  <div>
+    <h2 class="titles">Generate a Story</h2>
+    
+      <div>
+        <div id="emojis" class="shadow"></div>
+        <h3 class="titles">History</h3>
+        <div class="shadow"><textarea name="" id="emojiHistory" cols="30" rows="10"></textarea></div>
+      </div>
+    <h3 class="titles">Story Length</h3>
+    <form class="shadow form" action="">
+      <input type="number" name="" id="story-length-input" placeHolder="Enter a number...">
+      <input type="text" id="description-input">
+      <button type="submit" id="generate-story-btn">Submit</button>
+    </form>
+    <h3 class="titles" id="history-title">My Story</h3>
+    <form  class="shadow form" action="">
+      <p id="emoji-story">emoji</p>
+    </form>
+  </div>
 </body>
 </html>
