Cypress removed - smoother page

--- a/emojiStories.html
+++ b/emojiStories.html
@@ -20,14 +20,14 @@
       </div>
     <h3 class="titles">Story Length</h3>
     <div class="shadow form" action="">
-      <input type="number" name="" id="story-length-input" placeHolder="Enter a number...">
-      <input type="text" id="description-input">
+      <input type="number" name="" id="story-length-input" placeHolder="Enter a Number...">
+      <input type="text" id="description-input" placeHolder="Enter a Description...">
       <button type="submit" id="generate-story-btn">Generate Story</button>
       <button type="submit" id="submit-description-btn">Submit Description</button>
     </div>
     <h3 class="titles" >My Story</h3>
     <form  class="shadow form" action="">
-      <p id="emoji-story">emoji</p>
+      <p id="emoji-story"></p>
     </form>
   </div>
 </body>
